--- a/composer.json
+++ b/composer.json
@@ -19,5 +19,8 @@
         "psr-4": {
             "PleaseDontSwear\\": "src/"
         }
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^9"
     }
 }
