--- a/composer.json
+++ b/composer.json
@@ -22,5 +22,8 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^9"
+    },
+    "scripts": {
+        "tests": "./vendor/bin/phpunit tests"
     }
 }
