change author email

--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
     "authors": [
         {
             "name": "deoomen",
-            "email": "deoomen@protonmail.com",
+            "email": "deoomen@pm.me",
             "role": "developer"
         }
     ],
